Fix Cronet load flag initialization

Load flags were being read from the CronetURLRequestContextAdapter
on the main thread, which could potentially happen before they were
initialized on the network thread if a UrlRequest is created immediately
after the CronetEngine. Now they are read at request start time on the
network thread, which must be after context initialization.

BUG=743232

Change-Id: I3f9c5cd1cde906555c5ba68b4a45a9a3ee71b014
Reviewed-on: https://chromium-review.googlesource.com/574827
Reviewed-by: Paul Jensen <pauljensen@chromium.org>
Commit-Queue: Miriam Gershenson <mgersh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#487227}
Former-commit-id: 5b7eb518eef51dfbc0fbc05330dfba8994863f92