components/cronet/android/cronet_url_request_adapter.cc
@@ -91,7 +91,7 @@ CronetURLRequestAdapter::CronetURLRequestAdapter(
       initial_url_(url),
       initial_priority_(priority),
       initial_method_("GET"),
-      load_flags_(context->default_load_flags()),
+      load_flags_(net::LOAD_NORMAL),
       enable_metrics_(jenable_metrics == JNI_TRUE),
       metrics_reported_(false) {
   DCHECK(!context_->IsOnNetworkThread());
@@ -304,7 +304,7 @@ void CronetURLRequestAdapter::StartOnNetworkThread() {
           << " priority: " << RequestPriorityToString(initial_priority_);
   url_request_ = context_->GetURLRequestContext()->CreateRequest(
       initial_url_, net::DEFAULT_PRIORITY, this);
-  url_request_->SetLoadFlags(load_flags_);
+  url_request_->SetLoadFlags(load_flags_ | context_->default_load_flags());
   url_request_->set_method(initial_method_);
   url_request_->SetExtraRequestHeaders(initial_request_headers_);
   url_request_->SetPriority(initial_priority_);
